# apple-mail-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  LIVE_MCP_CLI_TESTING_REPORT_2026-05-21.md  PLAN_REVIEW_COMMENTS_2026-05-21.md  README.md  RELEASING.md  apple_mail_mcp.py  claude_desktop_config_example.json  pyproject.toml  server.json  skills-lock.json  sort_rules.example.json  start_mcp.sh
.agents/skills/finalize-apple-mail-mcp/: SKILL.md
.claude-plugin/: CLAUDE.md  marketplace.json
.claude/skills/: finalize-apple-mail-mcp
.cursor/skills/finalize-apple-mail-mcp/: SKILL.md
.github/workflows/: ci.yml  release.yml
apple-mail-mcpb/: CLAUDE.md  build-mcpb.sh  manifest.json
apple_mail_mcp/: __init__.py  core.py  imap.py
apple_mail_mcp/tools/: analytics.py  bulk.py  compose.py  imap_sort.py  inbox.py  manage.py  search.py  smart_inbox.py
docs/: AGENT_LIVE_TESTING.md  CLAUDE-conventions.md  CLAUDE.md
plugin/: CLAUDE.md  apple_mail_mcp.py  requirements.txt  start_mcp.sh
plugin/.claude-plugin/: plugin.json
plugin/apple_mail_mcp/: CLAUDE.md  __init__.py  __main__.py  cli.py  constants.py  core.py  server.py
plugin/apple_mail_mcp/tools/: CLAUDE.md  analytics.py  compose.py  inbox.py  manage.py  raw_source.py  search.py  smart_inbox.py
plugin/commands/: CLAUDE.md  email-management.md
plugin/docs/: CLAUDE.md
plugin/skills/: CLAUDE.md
plugin/skills/apple-mail-operator/: SKILL.md
plugin/skills/email-archive-cleanup/: SKILL.md
plugin/skills/email-attachments/: SKILL.md
plugin/skills/email-drafting/: SKILL.md
plugin/skills/email-management/: README.md  SKILL.md
plugin/skills/email-management/examples/: email-triage.md  inbox-zero-workflow.md
plugin/skills/email-style-profile/: SKILL.md
plugin/skills/inbox-triage/: SKILL.md
plugin/skills/mail-rules-advisor/: SKILL.md
plugin/skills/mailbox-taxonomy/: SKILL.md
plugin/ui/: dashboard.py
plugin/ui/templates/: dashboard.html
scripts/: check_versions.py  extract_changelog.py  verify_wheel.py
skill-email-management/: README.md  SKILL.md
tasks/: CLAUDE.md  id-first-refactor-spec.md  live-test-baseline-2026-05-21.md  phase-plan-3.1.7.md  plan-review-status-2026-05-21.md  todo.md
tasks/archive/: README.md
tasks/archive/2026-05-21/: CLI_TESTING_REPORT_2026-05-21.md  PLAN_REVIEW_COMMENTS_2026-05-21.md  README.md  phase-3-annotation-matrix.md  phase-plan-3.1.6.md  plugin-audit-and-action-plan-2026-05-21.md
tests/: CLAUDE.md  conftest.py  test_bulk_helpers.py  test_cli.py  test_cli_perf.py  test_compose_tools.py  test_core_applescript.py  test_get_inbox_overview_json.py  test_get_statistics_json.py  test_inbox_tools.py  test_mail_search_tools.py  test_modernization_3_1_5.py  test_orphan_watcher.py  test_phase_2_scan_hardening.py  test_phase_a_fixes.py  test_raw_source.py  test_read_only_registry.py  test_validate_manifests.py  test_version_consistency.py  test_wrapper_surface.py
tools/: CLAUDE.md  check_wrapper_surface.py  dev-check.sh  install-git-hooks.sh  pre-commit-validate.sh  validate_manifests.py  validate_manifests.sh
(+5 files in other folders)
